@@ -1,4 +1,5 @@
 5.1.7 -> 5.1.8:
+    - jbj: yarn: convert rpmmg refcount to usage mutex with refcounts.
     - jbj: yarn: convert rpmwf refcount to usage mutex.
     - jbj: rpmdb: don't bother with the silly structure assignment initialize.
     - jbj: yarn: wire up rpmdsFini, mark rpmdsFree for destruction.
